--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
   </title>
   
   <body>
-    <h1>This is my first github page</h1>
+    <h1>Example</h1>
   </body>
-  
-  <style>
-    body {
-      background-color:green;
-      color:#fff;
-      text-align:center;
-    }
-  </style>
-  
 </html>
